# equipo-1-ings-202610

./: CMakeLists.txt  README.md  deploy.md  test_runner.cpp
.github/workflows/: ci.yml
RF-01_Ingreso_Consulta_Texto/: ChatScreen.kt
RF-02_Clasificacion_Tematica/: clinical_engine.h
RF-03_Rechazo_Fuera_Dominio/: clinical_engine.cpp
RF-04_Busqueda_RAG/: bm25.cpp  bm25.h  rag_engine.cpp  rag_engine.h
RF-05_Generacion_Modelo_Local/: README.md  llm_engine.cpp  llm_engine.h
analysis/: requirements-fn.md
app/: README.md  build.gradle.kts
app/src/main/assets/: chunks.json  emergency_clinical_rules.json  emergency_config.json  routine_clinical_rules.json
app/src/main/java/com/obsIA/engine/: NativeEngine.kt
app/src/main/java/com/upb/obsia/data/repository/: EngineRepositoryImpl.kt
app/src/main/java/com/upb/obsia/domain/: EmergencyClinicalRules.kt  EmergencyDetector.kt  QueryOrchestrator.kt  RoutineClinicalRules.kt
app/src/main/java/com/upb/obsia/domain/model/: ClinicalResponse.kt  EngineResponse.kt  UrgencyLevel.kt
app/src/main/java/com/upb/obsia/domain/repository/: EngineRepository.kt
app/src/main/java/com/upb/obsia/ui/viewmodel/: ChatViewModel.kt
app/src/test/java/com/upb/obsia/: EmergencyClinicalRulesTest.kt  EmergencyDetectorTest.kt
assets/: emergency_clinical_rules.json  emergency_config.json  routine_clinical_rules.json
client/: .gitignore
doc/: index.md  sprint.md
doc/analysis/: diagrams.md  index.md  mvp.md  requirements-fn.md  requirements-nfn.md
doc/design/: be.md  diagrams.md  fe.md  index.md  ui.md  ux.md
doc/sprints/: burndown.md
docs/: NativeEngine_kotlin_stub.kt  jni_contract.md
domain/: EmergencyClinicalRules.kt  EmergencyDetector.kt  QueryOrchestrator.kt  RoutineClinicalRules.kt
domain/model/: ClinicalResponse.kt  UrgencyLevel.kt
gradle/: libs.versions.toml
include/: obsIA_jni.h  triage_engine.h
scripts/: build_android.sh
src/jni/: obsIA_jni.cpp
src/triage/: triage_engine.cpp
